--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,12 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "dev": "nuxt"
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "nuxt": "^2.8.1",
     "vue": "^2.6.10",
     "web3": "^1.0.0-beta.55"
   },
